--- a/Variational Autoencoders.ipynb
+++ b/Variational Autoencoders.ipynb
@@ -51,7 +51,8 @@
     }
    ],
    "source": [
-    "z_real"
+    "mean_W = tf.Variable(tf.zeros(n_W), name=\"q_W\")\n",
+    "log_var_W = tf.Variable(tf.zeros(n_W), name=\"q_W\")\n"
    ]
   },
   {
@@ -62,9 +63,21 @@
    },
    "outputs": [],
    "source": [
-    "def elbo():\n",
+    "def generateSamples():\n",
+    "    z_sample = mean_W + \n",
+    "\n",
+    "def nelbo(z_samples):\n",
+    "    tf.mean(log_likelihood(z_samples)) - DKL_gaussian\n",
     "    \n",
+    "\n",
     "    \n",
+    "def log_likelihood(z_sample, train_X, train_y):\n",
+    "    log_p = tf.reduce_sum(\n",
+    "        train_y * tf.log(tf.sigmoid(tf.matmul(train_X, z_sample))) + \\\n",
+    "        (1-train_y) * tf.log(1-tf.sigmoid(tf.matmul(train_X, z_sample)))\n",
+    "    )\n",
+    "    return log_p\n",
+    "\n",
     "## Kullback-Leibler divergence between multivariate Gaussian distributions q and p with diagonal covariance matrices\n",
     "def DKL_gaussian(mq, log_vq, mp, log_vp):\n",
     "    \"\"\"\n",
@@ -93,6 +106,7 @@
     "# our error in negative\n",
     "#  KLD is in closed version\n",
     "#  Likelihood -> sample from variational dristribution with reparametrization\n",
+    "\n",
     "\n",
     "def elbo_grad(z_sample, mu, sigma):\n",
     "    score_mu = (z_sample - mu)/(sigma)\n",
