almost finished. but have to track down one bug.

--- a/Variational Autoencoders.ipynb
+++ b/Variational Autoencoders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -17,48 +17,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 144,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# DATA GENERATION\n",
     "\n",
     "N = 1000         # size of the dataset\n",
     "P = 4            # number of weights\n",
-    "L = 1            # number of samples for MonteCarlo\n",
+    "L = 10           # number of samples for MonteCarlo\n",
     "M = 100          # size of batches\n",
     "\n",
     "\n",
-    "randSeed = np.random.RandomState(0)\n",
+    "rand_seed = np.random.RandomState(0)\n",
     "\n",
-    "data_X = randSeed.randn(N,P)\n",
-    "w_real = randSeed.randn(P)\n",
-    "data_y = randSeed.binomial(1,sigmoid(np.dot(X,z_real)))"
+    "data_X = rand_seed.randn(N,P)\n",
+    "w_real = rand_seed.randn(P)\n",
+    "data_y = rand_seed.binomial(1,sigmoid(np.dot(data_X,w_real)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DEBUG"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = tf.random_normal(shape=[10, 10])\n",
+    "twos = tf.Variable([1.0,2.0,3.0,2.0,2.0,2.0,2.0,2.0,2.0,2.0], tf.float32)\n",
+    "out = tf.add(tf.multiply(H, twos), tf.ones(10))\n",
+    "out2 = out + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "x = tf.constant([[1, 2, 3], [1, 2, 3], [1,2,3]])\n",
+    "\n",
+    "z = tf.multiply(x, [1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1, 4, 9],\n",
+      "       [1, 4, 9],\n",
+      "       [1, 4, 9]], dtype=int32)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "init = tf.global_variables_initializer()\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "print(sess.run([z]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DEBUG END"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class VariationalLogReg(object):\n",
-    "    def __init__(self, N_data, n_Weights, n_samples, size_batches):\n",
+    "    def __init__(self, n_datapoints, n_weights, n_samples, batch_size):\n",
     "        # SIZES\n",
-    "        self.N = N_data\n",
-    "        self.P = n_Weights\n",
-    "        self.M = size_batches\n",
+    "        self.N = n_datapoints\n",
+    "        self.P = n_weights\n",
+    "        self.M = batch_size\n",
     "        \n",
     "        ## Batch data placeholders\n",
-    "        self.X = tf.placeholder(tf.float32, [None, self.N])\n",
-    "        self.Y = tf.placeholder(tf.float32, [None, self.N])\n",
+    "        self.X = tf.placeholder(tf.float32, [batch_size, n_weights])\n",
+    "        self.Y = tf.placeholder(tf.float32, [batch_size])\n",
     "        \n",
     "        ## Set the number of Monte Carlo samples as a placeholder so that it can be different for training and test\n",
-    "        self.L =  tf.placeholder(tf.int32)\n",
+    "        # self.L =  tf.placeholder(tf.int32)\n",
+    "        self.L = n_samples\n",
     "        \n",
     "        # PRIOR OF WEIGHTS\n",
     "        self.prior_mean_W, self.log_prior_var_W = self.get_prior_W()\n",
@@ -91,15 +151,25 @@
     "    # these w samples are drawn from the variational distribution q\n",
     "    def sample_from_W(self):\n",
     "        # for now we only draw 1 sample (L=1) => z equals one vector\n",
-    "        z = get_samples()\n",
+    "        z = self.get_samples()\n",
     "        ## division by 2 to obtain pure standard deviation\n",
     "        w_from_q = tf.add(tf.multiply(z, tf.exp(self.log_var_W / 2)), self.mean_W)\n",
     "        return w_from_q\n",
     "    \n",
-    "    def get_ll(self, w_sample):\n",
-    "        logReg_Out = tf.sigmoid(tf.matmul(self.X, w_sample))\n",
-    "        log_p = tf.reduce_sum(self.y * tf.log(logReg_Out) + (1-self.y) * tf.log(1-logReg_Out))\n",
-    "        return log_p, logReg_Out\n",
+    "    # returns the expected log-likelihood of the lower bound\n",
+    "    def get_ell(self, w_sample):\n",
+    "        # for each sample we get num_montecarlo_samples outputs\n",
+    "        log_reg_out = tf.sigmoid(tf.matmul(self.X, tf.transpose(w_sample)))\n",
+    "        \n",
+    "        log_p_per_sample = tf.reduce_sum(\n",
+    "            tf.add(\n",
+    "                tf.multiply(self.Y, tf.transpose(tf.log(log_reg_out))),\n",
+    "                tf.multiply((1-self.Y), tf.transpose(tf.log(1-log_reg_out)))\n",
+    "            ), axis=1\n",
+    "        )\n",
+    "        \n",
+    "        log_p = tf.reduce_mean(log_p_per_sample)\n",
+    "        return log_p, log_reg_out\n",
     "\n",
     "    ## Kullback-Leibler divergence between multivariate Gaussian distributions q and p with diagonal covariance matrices\n",
     "    def get_kl(self):\n",
@@ -121,14 +191,115 @@
     "\n",
     "    def get_nelbo(self):\n",
     "        kl = self.get_kl()\n",
-    "        ell, layer_out = self.get_ll(self.sample_W())\n",
+    "        ell, layer_out = self.get_ell(self.sample_from_W())\n",
     "        # DKL_gaussian - tf.mean([log_likelihood(w) for w in w_from_q])\n",
     "        nelbo = kl - self.N/self.M * ell\n",
     "        return nelbo, kl, ell, layer_out\n",
     "\n",
     "    \n",
     "    \n",
-    "    "
+    "    \n",
+    "    \n",
+    "    def learn(self, learning_rate=0.01):\n",
+    "\n",
+    "        optimizer = tf.train.AdadeltaOptimizer(learning_rate)\n",
+    "\n",
+    "        ## Set all_variables to contain the complete set of TF variables to optimize\n",
+    "        all_variables = tf.trainable_variables()\n",
+    "\n",
+    "        ## Define the optimizer\n",
+    "        train_step = optimizer.minimize(self.loss, var_list=all_variables)\n",
+    "\n",
+    "        ## Initialize all variables\n",
+    "        init = tf.global_variables_initializer()\n",
+    "\n",
+    "        ## Initialize TF session\n",
+    "\n",
+    "        with tf.Session() as sess:\n",
+    "            sess.run(init)\n",
+    "\n",
+    "            ## Set the folder where the logs are going to be written \n",
+    "            # summary_writer = tf.train.SummaryWriter('logs/', self.session.graph)\n",
+    "            summary_writer = tf.summary.FileWriter('logs/', self.session.graph)\n",
+    "\n",
+    "            for _ in range(500):\n",
+    "                indices = np.random.choice(N, M)\n",
+    "                X_batch, y_batch = data_X[indices], data_y[indices]\n",
+    "                nelbo, kl, ell, _ = sess.run(train_step, feed_dict={self.X: X_batch, self.Y: y_batch})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([688, 716, 992, 776, 567, 224, 847, 815, 749,  52,  50, 114, 420,\n",
+       "       817, 487, 776, 649, 183, 563, 934, 869, 129, 838, 800, 210, 313,\n",
+       "       214, 757, 714, 514, 138, 450, 391, 802, 871, 813, 963, 989,  78,\n",
+       "       618, 631, 352, 446, 881, 126, 170, 457, 761, 446, 181, 727, 469,\n",
+       "       925, 995, 199, 590, 277, 312, 240, 568, 617, 383, 558, 262, 449,\n",
+       "       497,  13, 876,  69, 269, 257, 431, 893, 287, 141, 630, 331, 694,\n",
+       "       491, 371, 229, 432,  86, 486, 769, 796, 287, 166, 472,  49, 998,\n",
+       "        16, 582, 363, 785, 207, 796, 351, 225, 154])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.choice(N,M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1,\n",
+       "       0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0,\n",
+       "       1, 1, 1, 0, 0, 1, 0, 1])"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_y[indices]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-146-46bee778b2aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVariationalLogReg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mP\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-145-94868fc7e7f2>\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, learning_rate)\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m                 \u001b[0mX_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_X\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_y\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindices\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 121\u001b[0;31m                 \u001b[0mnelbo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mX_batch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my_batch\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "vi = VariationalLogReg(N,P,L,M)\n",
+    "vi.learn()"
    ]
   },
   {
@@ -273,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -333,9 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -370,9 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -425,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
