--- a/Variational Autoencoders.ipynb
+++ b/Variational Autoencoders.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 285,
    "metadata": {
     "scrolled": true
    },
@@ -280,16 +280,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i=0  kl=0.0011987686  nell=9530.9902  nelbo=953099.0\n",
-      "i=100  kl=5.7744222  nell=6230.9497  nelbo=623100.75\n",
-      "i=200  kl=12.732378  nell=4439.9067  nelbo=444003.41\n",
-      "i=300  kl=17.795942  nell=4325.3252  nelbo=432550.31\n",
-      "i=400  kl=22.062263  nell=4222.2944  nelbo=422251.5\n",
-      "i=500  kl=24.516138  nell=4134.7866  nelbo=413503.19\n",
-      "i=600  kl=26.424465  nell=4197.5737  nelbo=419783.81\n",
-      "i=700  kl=28.238794  nell=4169.7964  nelbo=417007.88\n",
-      "i=800  kl=29.584919  nell=3998.1665  nelbo=399846.25\n",
-      "i=900  kl=30.504919  nell=3988.8765  nelbo=398918.16\n"
+      "i=0  kl=0.0011987686  nell=12213.467  nelbo=1221346.6\n",
+      "i=100  kl=5.8168745  nell=6140.729  nelbo=614078.69\n",
+      "i=200  kl=12.564169  nell=4813.311  nelbo=481343.66\n",
+      "i=300  kl=17.759531  nell=4540.0718  nelbo=454024.94\n",
+      "i=400  kl=21.866377  nell=4200.6162  nelbo=420083.5\n",
+      "i=500  kl=24.545071  nell=4186.7368  nelbo=418698.22\n",
+      "i=600  kl=26.387152  nell=4117.9263  nelbo=411819.0\n",
+      "i=700  kl=28.122944  nell=4041.5649  nelbo=404184.62\n",
+      "i=800  kl=29.495417  nell=3981.5632  nelbo=398185.81\n",
+      "i=900  kl=30.529579  nell=3995.4148  nelbo=399572.0\n"
      ]
     }
    ],
