--- a/Variational Autoencoders.ipynb
+++ b/Variational Autoencoders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# DATA GENERATION\n",
@@ -45,8 +47,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [tf.Variable(tf.zeros([10, 10]), name=\"p_W\") for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 2.4634428 ,  1.19415343,  0.19139767],\n",
+       "        [ 2.4634428 ,  1.19415343,  0.19139767],\n",
+       "        [ 2.4634428 ,  1.19415343,  0.19139767]], dtype=float32),\n",
+       " array([[ 1.46344292,  0.19415343, -0.80860233]], dtype=float32)]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess.run([A + tf.reshape(W[1,:,0], [1,-1]), tf.reshape(W[1,:,0], [1,-1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "std_samples = tf.random_normal(shape=[10, 4])\n",
@@ -86,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -95,7 +144,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([6, 6, 6], dtype=int32), 6]\n"
+      "[array([[[1, 2, 3],\n",
+      "        [1, 2, 3],\n",
+      "        [1, 2, 3]],\n",
+      "\n",
+      "       [[1, 2, 3],\n",
+      "        [1, 2, 3],\n",
+      "        [1, 2, 3]],\n",
+      "\n",
+      "       [[1, 2, 3],\n",
+      "        [1, 2, 3],\n",
+      "        [1, 2, 3]]], dtype=int32), array([[[1, 1, 1],\n",
+      "        [1, 1, 1],\n",
+      "        [1, 1, 1]],\n",
+      "\n",
+      "       [[1, 1, 1],\n",
+      "        [1, 1, 1],\n",
+      "        [1, 1, 1]],\n",
+      "\n",
+      "       [[1, 1, 1],\n",
+      "        [1, 1, 1],\n",
+      "        [1, 1, 1]]], dtype=int32), array([[[6, 6, 6],\n",
+      "        [6, 6, 6],\n",
+      "        [6, 6, 6]],\n",
+      "\n",
+      "       [[6, 6, 6],\n",
+      "        [6, 6, 6],\n",
+      "        [6, 6, 6]],\n",
+      "\n",
+      "       [[6, 6, 6],\n",
+      "        [6, 6, 6],\n",
+      "        [6, 6, 6]]], dtype=int32)]\n"
      ]
     }
    ],
@@ -103,7 +182,7 @@
     "init = tf.global_variables_initializer()\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
-    "print(sess.run([out, out_mean]))"
+    "print(sess.run([A,B,C]))"
    ]
   },
   {
@@ -116,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class VariationalLogReg(object):\n",
@@ -301,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sigma = np.exp(log_var_W_final)"
