Progress for bayesian neural networks

--- a/VarAutoenc.ipynb
+++ b/VarAutoenc.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -169,217 +169,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting MNIST_data\\train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data\\train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data\\t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data\\t10k-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
       "--- Epoch 0\n",
       "(20, 784)\n",
-      "Train cost: 210.605908009\n",
-      "Validation cost: 206.772180481\n",
+      "Train cost: 235.884652765\n",
+      "Validation cost: 207.09569458\n",
       "--- Epoch 1\n",
       "(20, 784)\n",
-      "Train cost: 189.02823306\n",
-      "Validation cost: 184.42770752\n",
+      "Train cost: 202.181980091\n",
+      "Validation cost: 188.262455139\n",
       "--- Epoch 2\n",
       "(20, 784)\n",
-      "Train cost: 180.415211043\n",
-      "Validation cost: 175.31289032\n",
+      "Train cost: 186.003778243\n",
+      "Validation cost: 182.553652649\n",
       "--- Epoch 3\n",
       "(20, 784)\n",
-      "Train cost: 173.689971424\n",
-      "Validation cost: 170.097927246\n",
+      "Train cost: 181.774477622\n",
+      "Validation cost: 179.196152954\n",
       "--- Epoch 4\n",
       "(20, 784)\n",
-      "Train cost: 169.481911122\n",
-      "Validation cost: 168.392445068\n",
+      "Train cost: 177.797433583\n",
+      "Validation cost: 174.124654236\n",
       "--- Epoch 5\n",
       "(20, 784)\n",
-      "Train cost: 164.33701244\n",
-      "Validation cost: 156.846123657\n",
+      "Train cost: 172.095106701\n",
+      "Validation cost: 166.30765686\n",
       "--- Epoch 6\n",
       "(20, 784)\n",
-      "Train cost: 155.324111162\n",
-      "Validation cost: 150.862333984\n",
+      "Train cost: 162.812646734\n",
+      "Validation cost: 158.33397644\n",
       "--- Epoch 7\n",
       "(20, 784)\n",
-      "Train cost: 152.080366488\n",
-      "Validation cost: 150.178271484\n",
+      "Train cost: 158.496675581\n",
+      "Validation cost: 156.676775513\n",
       "--- Epoch 8\n",
       "(20, 784)\n",
-      "Train cost: 149.490086587\n",
-      "Validation cost: 147.348408051\n",
+      "Train cost: 155.474066661\n",
+      "Validation cost: 152.575753784\n",
       "--- Epoch 9\n",
       "(20, 784)\n",
-      "Train cost: 148.101853222\n",
-      "Validation cost: 146.934617004\n",
+      "Train cost: 153.289056424\n",
+      "Validation cost: 150.870223694\n",
       "--- Epoch 10\n",
       "(20, 784)\n",
-      "Train cost: 148.3919329\n",
-      "Validation cost: 147.942812805\n",
+      "Train cost: 151.951890647\n",
+      "Validation cost: 150.266656799\n",
       "--- Epoch 11\n",
       "(20, 784)\n",
-      "Train cost: 147.05463132\n",
-      "Validation cost: 145.50285553\n",
+      "Train cost: 150.244729642\n",
+      "Validation cost: 148.169593811\n",
       "--- Epoch 12\n",
       "(20, 784)\n",
-      "Train cost: 145.812789542\n",
-      "Validation cost: 143.728537598\n",
+      "Train cost: 148.994680592\n",
+      "Validation cost: 146.77972168\n",
       "--- Epoch 13\n",
       "(20, 784)\n",
-      "Train cost: 145.138882363\n",
-      "Validation cost: 144.864223633\n",
+      "Train cost: 147.890092468\n",
+      "Validation cost: 145.390452881\n",
       "--- Epoch 14\n",
       "(20, 784)\n",
-      "Train cost: 144.810862441\n",
-      "Validation cost: 144.729807434\n",
+      "Train cost: 146.782338937\n",
+      "Validation cost: 146.478420105\n",
       "--- Epoch 15\n",
       "(20, 784)\n",
-      "Train cost: 144.044116877\n",
-      "Validation cost: 142.919110107\n",
+      "Train cost: 145.794640336\n",
+      "Validation cost: 143.925798645\n",
       "--- Epoch 16\n",
       "(20, 784)\n",
-      "Train cost: 143.58589164\n",
-      "Validation cost: 142.376000671\n",
+      "Train cost: 144.966518402\n",
+      "Validation cost: 143.378693848\n",
       "--- Epoch 17\n",
       "(20, 784)\n",
-      "Train cost: 144.139335591\n",
-      "Validation cost: 142.594580688\n",
+      "Train cost: 144.330647278\n",
+      "Validation cost: 142.779694824\n",
       "--- Epoch 18\n",
       "(20, 784)\n",
-      "Train cost: 143.517868125\n",
-      "Validation cost: 142.378660278\n",
+      "Train cost: 143.819174444\n",
+      "Validation cost: 142.673060913\n",
       "--- Epoch 19\n",
       "(20, 784)\n",
-      "Train cost: 143.457429754\n",
-      "Validation cost: 141.883675842\n",
+      "Train cost: 143.18554976\n",
+      "Validation cost: 142.610341492\n",
       "--- Epoch 20\n",
       "(20, 784)\n",
-      "Train cost: 142.857829465\n",
-      "Validation cost: 141.959293823\n",
+      "Train cost: 142.46824105\n",
+      "Validation cost: 141.655151062\n",
       "--- Epoch 21\n",
       "(20, 784)\n",
-      "Train cost: 142.115162575\n",
-      "Validation cost: 141.20048645\n",
+      "Train cost: 142.198804959\n",
+      "Validation cost: 141.81541748\n",
       "--- Epoch 22\n",
       "(20, 784)\n",
-      "Train cost: 142.035148204\n",
-      "Validation cost: 140.523626709\n",
+      "Train cost: 141.740814251\n",
+      "Validation cost: 141.436234131\n",
       "--- Epoch 23\n",
       "(20, 784)\n",
-      "Train cost: 142.153457004\n",
-      "Validation cost: 141.139477844\n",
+      "Train cost: 141.409387776\n",
+      "Validation cost: 140.119491119\n",
       "--- Epoch 24\n",
       "(20, 784)\n",
-      "Train cost: 142.439237713\n",
-      "Validation cost: 139.809870911\n",
+      "Train cost: 140.926526822\n",
+      "Validation cost: 139.940671387\n",
       "--- Epoch 25\n",
       "(20, 784)\n",
-      "Train cost: 142.056420801\n",
-      "Validation cost: 141.914016113\n",
+      "Train cost: 140.709574585\n",
+      "Validation cost: 140.336933289\n",
       "--- Epoch 26\n",
       "(20, 784)\n",
-      "Train cost: 144.81498807\n",
-      "Validation cost: 141.197858276\n",
+      "Train cost: 140.502878668\n",
+      "Validation cost: 139.276325684\n",
       "--- Epoch 27\n",
       "(20, 784)\n",
-      "Train cost: 141.820872359\n",
-      "Validation cost: 140.440999146\n",
+      "Train cost: 140.046166215\n",
+      "Validation cost: 138.554577637\n",
       "--- Epoch 28\n",
       "(20, 784)\n",
-      "Train cost: 141.301458241\n",
-      "Validation cost: 139.395366821\n",
+      "Train cost: 139.904258839\n",
+      "Validation cost: 139.72289093\n",
       "--- Epoch 29\n",
       "(20, 784)\n",
-      "Train cost: 140.820551356\n",
-      "Validation cost: 139.052896118\n",
+      "Train cost: 139.668416498\n",
+      "Validation cost: 138.648477936\n",
       "--- Epoch 30\n",
       "(20, 784)\n",
-      "Train cost: 140.570887951\n",
-      "Validation cost: 140.579565582\n",
+      "Train cost: 139.464772353\n",
+      "Validation cost: 138.25484848\n",
       "--- Epoch 31\n",
       "(20, 784)\n",
-      "Train cost: 140.240563341\n",
-      "Validation cost: 138.839254761\n",
+      "Train cost: 139.195042738\n",
+      "Validation cost: 138.019744873\n",
       "--- Epoch 32\n",
       "(20, 784)\n",
-      "Train cost: 139.618522172\n",
-      "Validation cost: 138.561888428\n",
+      "Train cost: 139.013498272\n",
+      "Validation cost: 138.351508484\n",
       "--- Epoch 33\n",
       "(20, 784)\n",
-      "Train cost: 139.717778501\n",
-      "Validation cost: 140.044526978\n",
+      "Train cost: 138.462638272\n",
+      "Validation cost: 138.106929016\n",
       "--- Epoch 34\n",
       "(20, 784)\n",
-      "Train cost: 139.630042045\n",
-      "Validation cost: 139.197559509\n",
+      "Train cost: 138.436915006\n",
+      "Validation cost: 138.541051636\n",
       "--- Epoch 35\n",
       "(20, 784)\n",
-      "Train cost: 139.464475694\n",
-      "Validation cost: 137.90306839\n",
+      "Train cost: 138.306448878\n",
+      "Validation cost: 137.807121582\n",
       "--- Epoch 36\n",
       "(20, 784)\n",
-      "Train cost: 139.41119228\n",
-      "Validation cost: 137.98724762\n",
+      "Train cost: 138.113993364\n",
+      "Validation cost: 137.270470581\n",
       "--- Epoch 37\n",
       "(20, 784)\n",
-      "Train cost: 138.711367562\n",
-      "Validation cost: 138.170882874\n",
+      "Train cost: 137.920043279\n",
+      "Validation cost: 137.485653534\n",
       "--- Epoch 38\n",
       "(20, 784)\n",
-      "Train cost: 139.319047408\n",
-      "Validation cost: 137.552290802\n",
+      "Train cost: 137.877523415\n",
+      "Validation cost: 137.531260071\n",
       "--- Epoch 39\n",
       "(20, 784)\n",
-      "Train cost: 139.137911668\n",
-      "Validation cost: 138.186737518\n",
+      "Train cost: 137.781552249\n",
+      "Validation cost: 137.041320038\n",
       "--- Epoch 40\n",
       "(20, 784)\n",
-      "Train cost: 139.844449962\n",
-      "Validation cost: 138.737324829\n",
+      "Train cost: 137.718097673\n",
+      "Validation cost: 137.514429626\n",
       "--- Epoch 41\n",
       "(20, 784)\n",
-      "Train cost: 138.900780792\n",
-      "Validation cost: 137.820718536\n",
+      "Train cost: 137.77954662\n",
+      "Validation cost: 137.785323181\n",
       "--- Epoch 42\n",
       "(20, 784)\n",
-      "Train cost: 138.56490731\n",
-      "Validation cost: 137.884744873\n",
+      "Train cost: 137.829792661\n",
+      "Validation cost: 137.39604187\n",
       "--- Epoch 43\n",
       "(20, 784)\n",
-      "Train cost: 139.15541232\n",
-      "Validation cost: 138.470232849\n",
+      "Train cost: 137.527276181\n",
+      "Validation cost: 137.333260956\n",
       "--- Epoch 44\n",
       "(20, 784)\n",
-      "Train cost: 139.252867418\n",
-      "Validation cost: 138.750442657\n",
+      "Train cost: 137.857171506\n",
+      "Validation cost: 137.58155838\n",
       "--- Epoch 45\n",
       "(20, 784)\n",
-      "Train cost: 138.969074513\n",
-      "Validation cost: 137.389324036\n",
+      "Train cost: 137.263053145\n",
+      "Validation cost: 137.026850891\n",
       "--- Epoch 46\n",
       "(20, 784)\n",
-      "Train cost: 138.104130415\n",
-      "Validation cost: 137.093039398\n",
+      "Train cost: 137.04529548\n",
+      "Validation cost: 136.985388794\n",
       "--- Epoch 47\n",
       "(20, 784)\n",
-      "Train cost: 138.210685647\n",
-      "Validation cost: 139.511295166\n",
+      "Train cost: 136.637339061\n",
+      "Validation cost: 137.005331879\n",
       "--- Epoch 48\n",
       "(20, 784)\n",
-      "Train cost: 138.165349093\n",
-      "Validation cost: 137.01297699\n",
+      "Train cost: 137.005843742\n",
+      "Validation cost: 136.719963684\n",
       "--- Epoch 49\n",
       "(20, 784)\n",
-      "Train cost: 137.837941465\n",
-      "Validation cost: 137.5020578\n"
+      "Train cost: 136.525464117\n",
+      "Validation cost: 136.473693085\n"
      ]
     }
    ],
@@ -489,6 +489,15 @@
     "if __name__ == '__main__':\n",
     "    test_mnist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -507,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
