updated bayesian autoencoder

--- a/BNN-Autoencoder-Convolutions.ipynb
+++ b/BNN-Autoencoder-Convolutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,121 @@
    ],
    "source": [
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1.7310586,  1.7310586],\n",
+       "        [ 1.7310586,  1.7310586],\n",
+       "        [ 1.7310586,  1.7310586]],\n",
+       "\n",
+       "       [[ 1.7310586,  1.7310586],\n",
+       "        [ 1.7310586,  1.7310586],\n",
+       "        [ 1.7310586,  1.7310586]],\n",
+       "\n",
+       "       [[ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586]],\n",
+       "\n",
+       "       [[ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586]],\n",
+       "\n",
+       "       [[ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586],\n",
+       "        [ 0.7310586,  0.7310586]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sess = tf.Session()\n",
+    "ones = tf.ones([2,3,2])\n",
+    "zeros = tf.zeros([3,3,2])\n",
+    "\n",
+    "base = tf.concat([ones, zeros], 0)\n",
+    "\n",
+    "rnd = tf.sigmoid(tf.ones([5,3,2]))\n",
+    "#sess.run(base)\n",
+    "sess.run(tf.expand_dims(rnd[:,0,:], 1) + base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor 'Sigmoid_1:0' shape=(5, 3, 2) dtype=float32>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.sigmoid(tf.ones([5,3,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.11135516,  0.2765055 , -0.58164316, -0.16078733],\n",
+       "        [ 0.18534203, -0.47609961,  1.00594819,  0.28827778],\n",
+       "        [ 0.22544473, -0.42611352,  0.85889214,  0.15157071]],\n",
+       "\n",
+       "       [[ 0.16972613,  0.32254413, -0.56507647,  0.30458999],\n",
+       "        [-0.28994685, -0.56199336,  0.98177004, -0.51654112],\n",
+       "        [-0.28088492, -0.44130275,  0.79675972, -0.53604215]],\n",
+       "\n",
+       "       [[ 0.84895802,  0.62798584,  0.75696599, -0.67824537],\n",
+       "        [-1.45672357, -1.0769875 , -1.30377126,  1.16388977],\n",
+       "        [-1.35082698, -1.00403082, -1.16322553,  1.07842624]],\n",
+       "\n",
+       "       [[-0.85498685, -0.18053003,  0.61956024,  1.25952053],\n",
+       "        [ 1.47990346,  0.31407833, -1.0545882 , -2.16401744],\n",
+       "        [ 1.25234985,  0.25098255, -1.05749238, -1.98042524]],\n",
+       "\n",
+       "       [[-1.42528391,  0.09106559, -0.36136189,  1.30444837],\n",
+       "        [ 2.43501163, -0.16072711,  0.62178731, -2.23906898],\n",
+       "        [ 2.35733008, -0.10727955,  0.56043494, -2.06908727]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc = 5\n",
+    "batch_size = 3\n",
+    "Din = 2\n",
+    "\n",
+    "X = tf.random_normal([batch_size, Din])\n",
+    "tens = tf.multiply(tf.ones([mc, batch_size, Din]), X)\n",
+    "\n",
+    "tens = tf.matmul(tens, tf.random_normal([mc, Din, 2*Din]))\n",
+    "\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "sess.run(tens)"
    ]
   },
   {
