--- a/VarAutoenc.ipynb
+++ b/VarAutoenc.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -77,34 +77,31 @@
     "        # INITIALIZE WEIGHTS & BIASES\n",
     "        self.W_enc, self.W_z_mu, self.W_z_log_sigma, self.W_dec = self.initialize_W()\n",
     "        self.b_enc, self.b_z_mu, self.b_z_log_sigma, self.b_dec = self.initialize_b()\n",
-    "        \n",
-    "        for w, b in zip(self.W_enc, self.b_enc):\n",
-    "            print(w.get_shape(), b.get_shape())\n",
-    "          \n",
-    "        print(self.W_z_mu.get_shape(), self.b_z_mu.get_shape())\n",
-    "        print(self.W_z_log_sigma.get_shape(), self.b_z_log_sigma.get_shape())\n",
-    "        \n",
-    "        for w, b in zip(self.W_dec, self.b_dec):\n",
-    "            print(w.get_shape(), b.get_shape())\n",
     "            \n",
     "        ## COMPUTATIONAL GRAPH\n",
-    "        self.Y, self.z_mu, self.z_log_sigma = self.feedforward()\n",
+    "        self.Y, self.z_mu, self.z_log_sigma, _ = self.feedforward()\n",
     "        self.loss, self.kl, self.ell = self.get_nelbo()\n",
     "\n",
     "        ## Initialize the session\n",
     "        self.session = tf.InteractiveSession()\n",
     "    \n",
-    "    def variable_summaries(self, var):\n",
-    "        \"\"\"Attach a lot of summaries to a Tensor (for TensorBoard visualization).\"\"\"\n",
-    "        with tf.name_scope('summaries'):\n",
-    "            mean = tf.reduce_mean(var)\n",
-    "            tf.summary.scalar('mean', mean)\n",
-    "            with tf.name_scope('stddev'):\n",
-    "                stddev = tf.sqrt(tf.reduce_mean(tf.square(var - mean)))\n",
-    "                tf.summary.scalar('stddev', stddev)\n",
-    "                tf.summary.scalar('max', tf.reduce_max(var))\n",
-    "                tf.summary.scalar('min', tf.reduce_min(var))\n",
-    "                tf.summary.histogram('histogram', var)\n",
+    "        print(\"VAE \"+self.name)\n",
+    "        self.print_network_size()\n",
+    "        \n",
+    "        \n",
+    "    def print_network_size(self):\n",
+    "        \"\"\"Print the sizes of biases and weights\"\"\"\n",
+    "        print(\" --> Encoder\")        \n",
+    "        for w, b in zip(self.W_enc, self.b_enc):\n",
+    "            print(w.get_shape(), b.get_shape())\n",
+    "            \n",
+    "        print(\" --> Latent Space\")   \n",
+    "        print(self.W_z_mu.get_shape(), self.b_z_mu.get_shape())\n",
+    "        print(self.W_z_log_sigma.get_shape(), self.b_z_log_sigma.get_shape())\n",
+    "        \n",
+    "        print(\" --> Decoder\")   \n",
+    "        for w, b in zip(self.W_dec, self.b_dec):\n",
+    "            print(w.get_shape(), b.get_shape())\n",
     "\n",
     "    ## ---------------------------------------------------------------------            \n",
     "    ## --------------- TF WEIGHTS & BIASES INITIALIZATION ------------------\n",
@@ -191,7 +188,25 @@
     "    ## ---------------------------------------------------------------------            \n",
     "    ## --------------------------- FEEDFORWARD -----------------------------\n",
     "    ## ---------------------------------------------------------------------\n",
-    "    \n",
+    "    def encoder(self, net):\n",
+    "        '''ENCODER: transform the input image into the latent space'''\n",
+    "        for i in range(self.length_encoder):\n",
+    "            net = self.activ(tf.matmul(net, self.W_enc[i]) + self.b_enc[i])\n",
+    "            \n",
+    "        z_mu = tf.matmul(net, self.W_z_mu) + self.b_z_mu\n",
+    "        z_log_sigma = 0.5 * (tf.matmul(net, self.W_z_log_sigma) + self.b_z_log_sigma)\n",
+    "        \n",
+    "        return z_mu, z_log_sigma\n",
+    "        \n",
+    "        \n",
+    "    def decoder(self, z):\n",
+    "        '''DECODER: transform a Latent Space representation into an image'''\n",
+    "        net = self.activ(tf.matmul(z, self.W_dec[0]) + self.b_dec[0])\n",
+    "        for i in range(1, self.length_decoder):\n",
+    "            net = self.activ(tf.matmul(net, self.W_dec[i]) + self.b_dec[i])\n",
+    "        \n",
+    "        return tf.nn.sigmoid(tf.matmul(net, self.W_dec[-1]) + self.b_dec[-1])        \n",
+    "                \n",
     "    \n",
     "    def feedforward(self):\n",
     "        \"\"\"\n",
@@ -201,24 +216,15 @@
     "        net = self.X\n",
     "\n",
     "        # ENCODER\n",
-    "        for i in range(self.length_encoder):\n",
-    "            net = self.activ(tf.matmul(net, self.W_enc[i]) + self.b_enc[i])\n",
-    "        \n",
-    "        # LATENT\n",
-    "        z_mu = tf.matmul(net, self.W_z_mu) + self.b_z_mu\n",
-    "        z_log_sigma = 0.5 * (tf.matmul(net, self.W_z_log_sigma) + self.b_z_log_sigma)\n",
+    "        z_mu, z_log_sigma = self.encoder(net)\n",
     "\n",
-    "        # Sample from posterior\n",
+    "        # LATENT: Sample from posterior\n",
     "        z = self.sample_from_Z(z_mu, z_log_sigma)\n",
     "\n",
     "        # DECODER\n",
-    "        net = self.activ(tf.matmul(z, self.W_dec[0]) + self.b_dec[0])\n",
-    "        for i in range(1, self.length_decoder):\n",
-    "            net = self.activ(tf.matmul(net, self.W_dec[i]) + self.b_dec[i])\n",
-    "        \n",
-    "        Y = tf.nn.sigmoid(tf.matmul(net, self.W_dec[-1]) + self.b_dec[-1])        \n",
+    "        Y = self.decoder(z)        \n",
     "                \n",
-    "        return Y, z_mu, z_log_sigma\n",
+    "        return Y, z_mu, z_log_sigma, z\n",
     "    \n",
     "    \n",
     "    ## ---------------------------------------------------------------------            \n",
@@ -315,58 +321,92 @@
     "        test_writer.close()\n",
     "        \n",
     "    def benchmark(self, validation=False, batch_size = 128):\n",
+    "        # TEST LOG LIKELIHOOD\n",
     "        if validation:\n",
     "            benchmark_data = mnist.validation\n",
-    "            title = 'Validation loss:'\n",
+    "            title = 'Validation LogLikelihood:'\n",
     "        else:\n",
     "            benchmark_data = mnist.test\n",
-    "            title = 'Test loss:'\n",
+    "            title = 'Test LogLikelihood:'\n",
     "        \n",
     "        total_batch = benchmark_data.num_examples // batch_size\n",
-    "        cost = 0\n",
+    "        ell = 0\n",
     "        for batch_i in range(total_batch):\n",
     "            batch_xs, _ = benchmark_data.next_batch(batch_size)\n",
-    "            c = self.session.run(self.loss,\n",
+    "            c = self.session.run(self.ell,\n",
     "                   feed_dict={self.X: batch_xs, self.Y: batch_xs})\n",
-    "            cost+= c/total_batch\n",
-    "        print(title, cost)\n",
-    "        return cost\n",
+    "            ell+= c/total_batch\n",
+    "        print(\"Model \", self.name, \". \", title, ell)\n",
+    "        \n",
+    "        # RECONSTRUCTION VISUALIZATION\n",
+    "        f = plot_recon()\n",
+    "        f.savefig(self.name+'_recon.png' % t_i)\n",
+    "        \n",
+    "        # LATENT SPACE VISUALIZATION\n",
+    "        f = plot_recon()\n",
+    "        f.savefig(self.name+'_recon.png' % t_i)\n",
+    "        \n",
+    "        return ell\n",
     "        \n",
     "    def serialize(self, path):\n",
+    "        '''Save the model in a file'''\n",
+    "        \n",
     "        saver = tf.train.Saver()\n",
     "        save_path = saver.save(self.session, path+self.name)\n",
     "        print(\"Model saved in file: %s\" % path+self.name)\n",
     "        \n",
+    "        \n",
     "    def restore(self, path):\n",
+    "        '''Restore the saved model'''\n",
+    "        \n",
     "        saver = tf.train.Saver()   \n",
     "        sess = tf.InteractiveSession()\n",
     "        saver.restore(sess, save_path=path)\n",
     "        self.session = sess\n",
+    "        print(\"Model restored from file: %s\" % path)\n",
     "    \n",
     "    def encode(self, input_vector):\n",
-    "        _, z = self.session.run(self.feedforward,\n",
+    "        '''Encode the input into the Latent Space'''\n",
+    "        \n",
+    "        _, _, _, z = self.session.run(self.feedforward,\n",
     "                                feed_dict={self.X: input_vector})\n",
     "        return z\n",
     "    \n",
-    "    def plot_enc_dec(self, n_examples = 10):\n",
-    "        # Plot example reconstructions\n",
-    "        test_xs, _ = mnist.test.next_batch(n_examples)\n",
-    "        recon = self.session.run(self.Y,\n",
-    "                    feed_dict={self.X: test_xs})\n",
+    "    def decode(self, z):\n",
+    "        '''Decode from the latent space into the out'''\n",
+    "        \n",
+    "        _, z_m, z_log_o = self.session.run(self.decode,\n",
+    "                                feed_dict={self.X: input_vector})\n",
+    "        return z_m, z_log_o\n",
+    "    \n",
+    "    \n",
+    "    def plot_recon(self, n_examples=20):\n",
+    "        '''Visualize Example Reconstrutions for the model'''\n",
+    "        \n",
+    "        xs = mnist.test.next_batch(n_examples)\n",
+    "        recon = self.session.run(self.Y, feed_dict={self.X: xs})\n",
     "        fig, axs = plt.subplots(2, n_examples, figsize=(20, 4))\n",
-    "        for example_i in range(n_examples):\n",
-    "            axs[0][example_i].imshow(\n",
-    "                np.reshape(test_xs[example_i, :], (28, 28)))\n",
-    "            axs[1][example_i].imshow(\n",
-    "                np.reshape(\n",
-    "                    np.reshape(recon[example_i, ...], (784,)),\n",
-    "                    (28, 28)))\n",
-    "            plt.gray()\n",
-    "            axs[0][example_i].get_xaxis().set_visible(False)\n",
-    "            axs[0][example_i].get_yaxis().set_visible(False)\n",
-    "            axs[1][example_i].get_xaxis().set_visible(False)\n",
-    "            axs[1][example_i].get_yaxis().set_visible(False)\n",
-    "        plt.show()"
+    "        for i in range(n_examples):\n",
+    "            axs[0][i].imshow(np.reshape(xs[i, :], (28, 28)), cmap='gray')\n",
+    "            axs[1][i].imshow(np.reshape(recon[i, ...], (28, 28)), cmap='gray')\n",
+    "            axs[0][i].axis('off')\n",
+    "            axs[1][i].axis('off')\n",
+    "        plt.show()\n",
+    "        return fig\n",
+    "    \n",
+    "    \n",
+    "    def plot_latent_recon(self, n_examples=20):        \n",
+    "        '''Visualize Reconstructions from the latent space'''\n",
+    "        \n",
+    "        imgs = []\n",
+    "        for img_i in np.linspace(-3, 3, n_examples):\n",
+    "            for img_j in np.linspace(-3, 3, n_examples):\n",
+    "                z = np.array([[img_i, img_j]], dtype=np.float32)\n",
+    "                recon = self.session.run(self.Y, feed_dict={self.X: xs})\n",
+    "                imgs.append(np.reshape(recon, (1, 28, 28, 1)))\n",
+    "        imgs_cat = np.concatenate(imgs)\n",
+    "        ax_manifold.imshow(montage_batch(imgs_cat))\n",
+    "        fig_manifold.savefig('manifold_%08d.png' % t_i)"
    ]
   },
   {
@@ -393,17 +433,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "VAE VA_1\n",
+      " --> Encoder\n",
       "(784, 256) (256,)\n",
       "(256, 128) (128,)\n",
+      " --> Latent Space\n",
       "(128, 2) (2,)\n",
       "(128, 2) (2,)\n",
+      " --> Decoder\n",
       "(2, 128) (128,)\n",
       "(128, 256) (256,)\n",
       "(256, 784) (784,)\n"
@@ -466,7 +510,7 @@
     }
    ],
    "source": [
-    "VA.learn(epochs=30)"
+    "VA.learn(epochs=100)"
    ]
   },
   {
@@ -507,102 +551,6 @@
     "def bias_variable(shape):\n",
     "    initial = tf.random_normal(shape, mean=0.0, stddev=0.01)\n",
     "    return tf.Variable(initial)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"Variational autoencoder with 2 layer fully-connected\n",
-    "encoder/decoders and gaussian noise distribution.\n",
-    "\"\"\"\n",
-    "\n",
-    "# %%\n",
-    "def VAE(input_shape=[None, 784],\n",
-    "        n_components_encoder=2048,\n",
-    "        n_components_decoder=2048,\n",
-    "        n_hidden=2,\n",
-    "        debug=False):\n",
-    "    # %%\n",
-    "    # Input placeholder\n",
-    "    if debug:\n",
-    "        input_shape = [50, 784]\n",
-    "        x = tf.Variable(np.zeros((input_shape), dtype=np.float32))\n",
-    "    else:\n",
-    "        x = tf.placeholder(tf.float32, input_shape)\n",
-    "\n",
-    "    activation = tf.nn.softplus\n",
-    "\n",
-    "    dims = x.get_shape().as_list()\n",
-    "    n_features = dims[1]\n",
-    "\n",
-    "    W_enc1 = weight_variable([n_features, n_components_encoder])\n",
-    "    b_enc1 = bias_variable([n_components_encoder])\n",
-    "    h_enc1 = activation(tf.matmul(x, W_enc1) + b_enc1)\n",
-    "\n",
-    "    W_enc2 = weight_variable([n_components_encoder, n_components_encoder])\n",
-    "    b_enc2 = bias_variable([n_components_encoder])\n",
-    "    h_enc2 = activation(tf.matmul(h_enc1, W_enc2) + b_enc2)\n",
-    "\n",
-    "    W_enc3 = weight_variable([n_components_encoder, n_components_encoder])\n",
-    "    b_enc3 = bias_variable([n_components_encoder])\n",
-    "    h_enc3 = activation(tf.matmul(h_enc2, W_enc3) + b_enc3)\n",
-    "\n",
-    "    W_mu = weight_variable([n_components_encoder, n_hidden])\n",
-    "    b_mu = bias_variable([n_hidden])\n",
-    "\n",
-    "    W_log_sigma = weight_variable([n_components_encoder, n_hidden])\n",
-    "    b_log_sigma = bias_variable([n_hidden])\n",
-    "\n",
-    "    z_mu = tf.matmul(h_enc3, W_mu) + b_mu\n",
-    "    z_log_sigma = 0.5 * (tf.matmul(h_enc3, W_log_sigma) + b_log_sigma)\n",
-    "\n",
-    "    # %%\n",
-    "    # Sample from noise distribution p(eps) ~ N(0, 1)\n",
-    "    if debug:\n",
-    "        epsilon = tf.random_normal(\n",
-    "            [dims[0], n_hidden])\n",
-    "    else:\n",
-    "        epsilon = tf.random_normal(\n",
-    "            tf.stack([tf.shape(x)[0], n_hidden]))\n",
-    "\n",
-    "    # Sample from posterior\n",
-    "    z = z_mu + tf.exp(z_log_sigma) * epsilon\n",
-    "\n",
-    "    W_dec1 = weight_variable([n_hidden, n_components_decoder])\n",
-    "    b_dec1 = bias_variable([n_components_decoder])\n",
-    "    h_dec1 = activation(tf.matmul(z, W_dec1) + b_dec1)\n",
-    "\n",
-    "    W_dec2 = weight_variable([n_components_decoder, n_components_decoder])\n",
-    "    b_dec2 = bias_variable([n_components_decoder])\n",
-    "    h_dec2 = activation(tf.matmul(h_dec1, W_dec2) + b_dec2)\n",
-    "\n",
-    "    W_dec3 = weight_variable([n_components_decoder, n_components_decoder])\n",
-    "    b_dec3 = bias_variable([n_components_decoder])\n",
-    "    h_dec3 = activation(tf.matmul(h_dec2, W_dec3) + b_dec3)\n",
-    "\n",
-    "    W_mu_dec = weight_variable([n_components_decoder, n_features])\n",
-    "    b_mu_dec = bias_variable([n_features])\n",
-    "    y = tf.nn.sigmoid(tf.matmul(h_dec3, W_mu_dec) + b_mu_dec)\n",
-    "\n",
-    "    # p(x|z)\n",
-    "    log_px_given_z = -tf.reduce_sum(\n",
-    "        x * tf.log(y + 1e-10) +\n",
-    "        (1 - x) * tf.log(1 - y + 1e-10), 1)\n",
-    "\n",
-    "    # d_kl(q(z|x)||p(z))\n",
-    "    # Appendix B: 0.5 * sum(1 + log(sigma^2) - mu^2 - sigma^2)\n",
-    "    kl_div = -0.5 * tf.reduce_sum(\n",
-    "        1.0 + 2.0 * z_log_sigma - tf.square(z_mu) - tf.exp(2.0 * z_log_sigma),\n",
-    "        1)\n",
-    "    loss = tf.reduce_mean(log_px_given_z + kl_div)\n",
-    "\n",
-    "    return {'cost': loss, 'x': x, 'z': z, 'y': y}\n",
-    "\n"
    ]
   },
   {
@@ -710,43 +658,6 @@
     "                                   feed_dict={ae['x']: batch_xs})[0]\n",
     "        print('Validation cost:', valid_cost /\n",
     "              (mnist.validation.num_examples // batch_size))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def montage_batch(images):\n",
-    "    \"\"\"Draws all filters (n_input * n_output filters) as a\n",
-    "    montage image separated by 1 pixel borders.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    batch : numpy.ndarray\n",
-    "        Input array to create montage of.\n",
-    "    Returns\n",
-    "    -------\n",
-    "    m : numpy.ndarray\n",
-    "        Montage image.\n",
-    "    \"\"\"\n",
-    "    img_h = images.shape[1]\n",
-    "    img_w = images.shape[2]\n",
-    "    n_plots = int(np.ceil(np.sqrt(images.shape[0])))\n",
-    "    m = np.ones(\n",
-    "        (images.shape[1] * n_plots + n_plots + 1,\n",
-    "         images.shape[2] * n_plots + n_plots + 1, 3)) * 0.5\n",
-    "\n",
-    "    for i in range(n_plots):\n",
-    "        for j in range(n_plots):\n",
-    "            this_filter = i * n_plots + j\n",
-    "            if this_filter < images.shape[0]:\n",
-    "                this_img = images[this_filter, ...]\n",
-    "                m[1 + i + i * img_h:1 + i + (i + 1) * img_h,\n",
-    "                  1 + j + j * img_w:1 + j + (j + 1) * img_w, :] = this_img\n",
-    "    return m\n"
    ]
   }
  ],
