Ran all configurations

--- a/Bayesian-VAE.ipynb
+++ b/Bayesian-VAE.ipynb
@@ -30,7 +30,7 @@
     }
    ],
    "source": [
-    "from models.bayesian_vae_two import BayesianVAE"
+    "from models.bayesian_vae import BayesianVAE"
    ]
   },
   {
